seeding data via data.sql