@@ -38,26 +38,26 @@ public class ProjektPekaoApplication implements CommandLineRunner {
 
     @Override
     public void run(String... args) {
-        Author author1 = new Author("Craig", "Walls");
-        Author author2 = new Author("Pierre-Yves", "Saumont");
-
-        authorRepository.saveAll(Arrays.asList(author1, author2));
-
-        Comment comment1 = new Comment("Dupa Jasiu");
-        Comment comment2 = new Comment("Kolejny komentarz");
-        Comment comment3= new Comment("Ta książka jest ok");
-        commentRepository.saveAll(Arrays.asList(comment1, comment2, comment3));
-        Book book1 = new Book("Spring w Akcji", author1, List.of(comment2));
-        Book book2 = new Book("Java", author2, List.of(comment1));
-        Book book3 = new Book("Programowanie funkcyjne", author2, List.of(comment3));
-        bookRepository.saveAll(Arrays.asList(book1, book2, book3));
-
-        User user1 = new User("Tomek", "Czornak", "tomek@gmail.com", new SimpleDateFormat("dd-MM-yyyy HH:mm:ss z")
-                .format(new Date()), List.of(comment3));
-        User user2 = new User("Marek", "Nowakowski", "mareknowakowski@gmail.com", new SimpleDateFormat("dd-MM-yyyy HH:mm:ss z")
-                .format(new Date()), List.of(comment1, comment2));
-        userRepository.saveAll(List.of(user1,user2));
-
+//        Author author1 = new Author("Craig", "Walls");
+//        Author author2 = new Author("Pierre-Yves", "Saumont");
+//
+//        authorRepository.saveAll(Arrays.asList(author1, author2));
+//
+//
+//        Book book1 = new Book("Spring w Akcji", author1, List.of(comment2));
+//        Book book2 = new Book("Java", author2, List.of(comment1));
+//        Book book3 = new Book("Programowanie funkcyjne", author2, List.of(comment3));
+//        bookRepository.saveAll(Arrays.asList(book1, book2, book3));
+//
+//        User user1 = new User("Tomek", "Czornak", "tomek@gmail.com", new SimpleDateFormat("dd-MM-yyyy HH:mm:ss z")
+//                .format(new Date()), List.of(comment3));
+//        User user2 = new User("Marek", "Nowakowski", "mareknowakowski@gmail.com", new SimpleDateFormat("dd-MM-yyyy HH:mm:ss z")
+//                .format(new Date()), List.of(comment1, comment2));
+//        userRepository.saveAll(List.of(user1,user2));
+//        Comment comment1 = new Comment("Dupa Jasiu");
+//        Comment comment2 = new Comment("Kolejny komentarz");
+//        Comment comment3= new Comment("Ta książka jest ok");
+//        commentRepository.saveAll(Arrays.asList(comment1, comment2, comment3));
 
     }
 }
